--- a/Inutilometro/InutilometroV3.html
+++ b/Inutilometro/InutilometroV3.html
@@ -33,21 +33,15 @@
           <a href="*|ARCHIVE|*" style="color:#888;text-decoration:underline;">Ver no browser</a>
         </td>
       </tr>
-      <!-- Header principal -->
-      <tr>
-        <td style="padding:40px 20px 24px 20px;text-align:center;background:#5b099b;">
-          <a href="https://marsshot.eu" target="_blank" rel="noopener" style="text-decoration:none;">
-            <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0">
-              <tr>
-                <td style="color:#ffffff;font-family:Arial,'Helvetica Neue',Helvetica,sans-serif;font-size:36px;font-weight:bold;letter-spacing:1px;padding-bottom:4px;text-align:center;">mars shot</td>
-              </tr>
-              <tr>
-                <td style="color:#e0d4ff;font-size:16px;letter-spacing:2px;text-transform:uppercase;padding-bottom:24px;text-align:center;">REDEFINING LIMITS</td>
-              </tr>
-            </table>
-          </a>
-        </td>
-      </tr>
+      	  <!-- Header principal -->
+	  <tr>
+      <td style="padding:40px 20px 24px 20px;text-align:center;background:#5b099b;">
+        <div style="color:#ffffff;font-family:'Playfair Display',Georgia,serif;font-size:36px;font-weight:700;letter-spacing:1px;margin-bottom:4px;">
+        mars shot
+        </div>	
+        <div style="color:#e0d4ff;font-size:16px;letter-spacing:2px;text-transform:uppercase;margin-bottom:24px;">
+        REDEFINING LIMITS
+        </div>
       <!-- Spacer -->
       <tr>
         <td style="height:32px;"></td>
@@ -55,10 +49,15 @@
       <!-- Conteúdo principal -->
       <tr>
         <td style="padding:0 30px 30px 30px;font-size:16px;line-height:1.6;color:#222;text-align:justify;">
-          <p style="margin:0 0 16px 0;">Quantas horas da sua semana são gastas em tarefas que sabe que não fazem sentido?</p>
-          <p style="margin:0 0 16px 0;">Relatórios manuais. Pedidos em duplicado. Emails para pedir… o que já devíamos ter.<br>Pequenos absurdos do dia-a-dia que, somados, nos roubam vida.</p>
+          <p style="margin:0 0 16px 0;"><strong>Quantas horas da sua semana são gastas em tarefas que sabe que não fazem sentido?</strong><p>
+          <ul style="margin:0 0 16px 0;padding-left:20px;list-style:none;">
+            <li style="margin-bottom:8px;">• Relatórios manuais</li>
+            <li style="margin-bottom:8px;">• Pedidos em duplicado</li>
+            <li style="margin-bottom:8px;">• Emails para pedir… o que já devíamos ter</li>
+            <li style="margin-bottom:8px;">• Pequenos absurdos do dia-a-dia que, somados, nos roubam vida</li>
+          </ul>
           <p style="margin:0 0 16px 0;">O Inutilómetro foi criado para isso. Para dar visibilidade ao invisível.<br>Quando os colaboradores de uma empresa o preenchem com honestidade, o que emerge é poderoso:</p>
-          <ul style="margin:0 0 16px 20px;padding:0 0 0 0;list-style:none;">
+          <ul style="margin:0 0 16px 0;padding-left:20px;list-style:none;">
             <li style="margin-bottom:8px;">✔️ Processos que consomem tempo e energia sem gerar valor</li>
             <li style="margin-bottom:8px;">✔️ Tarefas repetitivas que podiam ser automatizadas</li>
             <li style="margin-bottom:8px;">✔️ Erros e retrabalho que afetam todos — e nem sempre chegam à gestão</li>
@@ -68,6 +67,14 @@
           <p style="margin:0 0 0 0;font-weight:bold;font-size:17px;">👉 <a href="https://www.inutilometro.pt" target="_blank" rel="noopener" style="color:#5b099b;text-decoration:underline;">www.inutilometro.pt</a></p>
         </td>
       </tr>
+            <!-- Imagem Inutilómetro -->
+            <tr>
+              <td style="padding:12px 0 16px 0;text-align:center;background:#ffffff;">
+                <a href="https://www.inutilometro.pt" target="_blank" rel="noopener" style="font-size:16px;font-weight:bold;line-height:1.4;padding:12px 28px;">
+                <img src="https://raw.githubusercontent.com/diogomarsshot/newsletter/refs/heads/main/Inutilometro/inutilometro_black.png" alt="Inutilómetro" style="width:100%;height:auto;display:block;margin:0 auto;">
+                </a>
+              </td>
+            </tr>
       <!-- CTA primário -->
       <tr>
         <td style="padding:0 30px 30px 30px;font-size:16px;line-height:1.6;color:#222;">
